# docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: /api
 definitions:
   github_com_amalgamated-tools_biblioteka_internal_db.BookSeriesInput:
     properties:
@@ -392,6 +393,10 @@ paths:
             items:
               $ref: '#/definitions/internal_handlers.adminUserDTO'
             type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
         "403":
           description: Forbidden
           schema:
@@ -434,6 +439,10 @@ paths:
             type: object
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
         "403":
@@ -497,6 +506,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/internal_handlers.userDTO'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
         "404":
           description: Not Found
           schema:
@@ -599,6 +612,10 @@ paths:
               nonce:
                 type: string
             type: object
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -614,6 +631,10 @@ paths:
       responses:
         "302":
           description: Redirect to OIDC provider
+        "404":
+          description: OIDC not configured
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -706,6 +727,10 @@ paths:
             items:
               $ref: '#/definitions/internal_handlers.authorDTO'
             type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -737,6 +762,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
         "409":
           description: Conflict
           schema:
@@ -764,6 +793,10 @@ paths:
           description: No Content
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
         "404":
@@ -796,6 +829,10 @@ paths:
             $ref: '#/definitions/internal_handlers.authorDTO'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
         "404":
@@ -838,6 +875,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
         "404":
           description: Not Found
           schema:
@@ -869,6 +910,10 @@ paths:
           description: No Content
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
         "404":
@@ -903,6 +948,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
         "404":
           description: Not Found
           schema:
@@ -928,6 +977,10 @@ paths:
             items:
               $ref: '#/definitions/internal_handlers.bookSummaryDTO'
             type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -959,6 +1012,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -982,6 +1039,10 @@ paths:
           description: No Content
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
         "404":
@@ -1014,6 +1075,10 @@ paths:
             $ref: '#/definitions/internal_handlers.bookDTO'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
         "404":
@@ -1056,6 +1121,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
         "404":
           description: Not Found
           schema:
@@ -1089,6 +1158,10 @@ paths:
             type: array
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
         "500":
@@ -1129,6 +1202,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -1158,6 +1235,10 @@ paths:
             type: array
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
         "500":
@@ -1196,6 +1277,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -1225,6 +1310,10 @@ paths:
             type: array
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
         "500":
@@ -1265,6 +1354,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -1284,6 +1377,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/internal_handlers.oidcConfigResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
         "403":
           description: Forbidden
           schema:
@@ -1322,6 +1419,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
         "403":
           description: Forbidden
           schema:
@@ -1345,6 +1446,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/internal_handlers.configStatusResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
       security:
       - BearerAuth: []
       summary: Get configuration status
@@ -1375,6 +1480,10 @@ paths:
             items:
               $ref: '#/definitions/internal_handlers.libraryDTO'
             type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -1406,6 +1515,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
         "409":
           description: Conflict
           schema:
@@ -1433,6 +1546,10 @@ paths:
           description: No Content
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
         "404":
@@ -1465,6 +1582,10 @@ paths:
             $ref: '#/definitions/internal_handlers.libraryDTO'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
         "404":
@@ -1507,6 +1628,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
         "404":
           description: Not Found
           schema:
@@ -1536,6 +1661,10 @@ paths:
             items:
               $ref: '#/definitions/internal_handlers.seriesDTO'
             type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -1567,6 +1696,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
         "409":
           description: Conflict
           schema:
@@ -1594,6 +1727,10 @@ paths:
           description: No Content
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
         "404":
@@ -1626,6 +1763,10 @@ paths:
             $ref: '#/definitions/internal_handlers.seriesDTO'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
         "404":
@@ -1666,6 +1807,10 @@ paths:
             $ref: '#/definitions/internal_handlers.seriesDTO'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_handlers.errorResponse'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/internal_handlers.errorResponse'
         "404":
